Fix for overlapping element background on Firefox.

--- a/main.css
+++ b/main.css
@@ -22,7 +22,6 @@ body {
 
 .caption-wrapper {
   width: 100%;
-  z-index: +10;
 }
 
 #myCarousel {
@@ -122,7 +121,7 @@ ul {
   font-family: "Lato", sans-serif;
   margin-top: 2px;
   margin: 7px;
-  padding: 0;
+  padding: 5px;
 }
 
 .skill-list {
